{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 61,
  "lineage": "ff13957d-6f38-2afb-6f95-bec909e673c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777496570354:internet-gateway/igw-0c60ff4df428a8fd5",
            "id": "igw-0c60ff4df428a8fd5",
            "owner_id": "777496570354",
            "tags": {
              "Name": "ecs-cicd-tdcloud-igw"
            },
            "tags_all": {
              "Name": "ecs-cicd-tdcloud-igw"
            },
            "vpc_id": "vpc-065614ea950eba69d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777496570354:route-table/rtb-05df8f8d21fd098c1",
            "id": "rtb-05df8f8d21fd098c1",
            "owner_id": "777496570354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c60ff4df428a8fd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-cicd-tdcloud-public-rt"
            },
            "tags_all": {
              "Name": "ecs-cicd-tdcloud-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065614ea950eba69d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f278fe281e92dc95",
            "route_table_id": "rtb-05df8f8d21fd098c1",
            "subnet_id": "subnet-0848c558f03c0c50a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073bac8542911c16f",
            "route_table_id": "rtb-05df8f8d21fd098c1",
            "subnet_id": "subnet-002c2b13440a2abc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "svc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777496570354:security-group/sg-099163b2e5a46d31e",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099163b2e5a46d31e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-cicd-tdcloud-sg",
            "name_prefix": "",
            "owner_id": "777496570354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-cicd-tdcloud-sg"
            },
            "tags_all": {
              "Name": "ecs-cicd-tdcloud-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065614ea950eba69d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777496570354:subnet/subnet-0848c558f03c0c50a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0848c558f03c0c50a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777496570354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-cicd-tdcloud-public-a"
            },
            "tags_all": {
              "Name": "ecs-cicd-tdcloud-public-a"
            },
            "vpc_id": "vpc-065614ea950eba69d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777496570354:subnet/subnet-002c2b13440a2abc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c2b13440a2abc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777496570354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-cicd-tdcloud-public-b"
            },
            "tags_all": {
              "Name": "ecs-cicd-tdcloud-public-b"
            },
            "vpc_id": "vpc-065614ea950eba69d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777496570354:vpc/vpc-065614ea950eba69d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b15f19c9902533e",
            "default_route_table_id": "rtb-02a6411955fb481ce",
            "default_security_group_id": "sg-0c47b24f2d659a266",
            "dhcp_options_id": "dopt-03cdf8aef1492ddba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065614ea950eba69d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a6411955fb481ce",
            "owner_id": "777496570354",
            "tags": {
              "Name": "ecs-cicd-tdcloud-vpc"
            },
            "tags_all": {
              "Name": "ecs-cicd-tdcloud-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}